# business-intelligence-data-analysis-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: code-style.md  testing.md
.claude/skills/verify-agent/: SKILL.md
app/: Dockerfile  config.py  main.py  models.py
app/agents/: adaptive_router.py  sql_graph.py
app/agents/tools/: financial_data.py  python_executor.py  sql_executor.py  sql_validator.py  vector_search.py  web_search.py
app/components/: retriever.py
app/observability/: cost_tracker.py  feedback.py  tracer.py
app/prompts/: registry.py  templates.py
app/routers/: chat.py
app/security/: input_guard.py  output_filter.py
app/services/: conversation.py  rag_pipeline.py  semantic_cache.py
evals/: golden_v1.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  FeedbackButtons.tsx  InputBar.tsx  MessageBubble.tsx  Sidebar.tsx  SourceCitations.tsx
frontend/src/hooks/: useChat.ts  useFeedback.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: load_northwind.py  run_eval.py  seed.py
tests/: conftest.py  test_cache.py  test_python_executor.py  test_retrieval.py  test_routing.py  test_seed.py  test_sql_executor.py  test_sql_graph.py  test_sql_validator.py  test_tracer.py
