[project]
name = "business-intelligence-data-analysis-agent"
version = "0.1.0"
description = "Business Intelligence Data Analysis Agent with RAG, LangGraph, and Arize Phoenix"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # API framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # LLM + agents
    "langchain>=0.2.0",
    "langchain-groq>=0.1.9",
    "langchain-openai>=0.1.0",   # DeepSeek uses OpenAI-compatible API
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "groq>=0.9.0",
    "openai>=1.35.0",            # DeepSeek SDK target
    # Vector store
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.18.0",
    # Web search
    "tavily-python>=0.3.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    # Cache
    "redis[asyncio]>=5.0.0",
    # Observability — Arize Phoenix
    "arize-phoenix>=4.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "openinference-instrumentation-langchain>=0.1.0",
    # Config / utils
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "sqlparse>=0.5.0",
    # Sandboxed Python execution — pandas analysis
    "e2b-code-interpreter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ragas>=0.4.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
